# Panacea

./: .env.example  .gitignore  Cargo.toml  Makefile  docker-compose.yml
.github/workflows/: ci.yml
config/: prometheus.yml
config/grafana/provisioning/dashboards/: dashboard.yml
crates/panacea-core/: Cargo.toml
crates/panacea-core/src/: errors.rs  events.rs  lib.rs  traits.rs  types.rs
crates/panacea-observability/: Cargo.toml
crates/panacea-observability/src/: lib.rs
docs/: conventions.md
services/eval-service/: Cargo.toml
services/eval-service/src/: main.rs
services/nutrition-service/: Cargo.toml
services/nutrition-service/src/: main.rs
services/pricing-service/: Cargo.toml
services/pricing-service/src/: main.rs
services/recipe-service/: Cargo.toml
services/recipe-service/src/: main.rs
services/scoring-service/: Cargo.toml
services/scoring-service/src/: main.rs
services/scraper-service/: Cargo.toml
services/scraper-service/src/: main.rs
services/supplement-service/: Cargo.toml
services/supplement-service/src/: main.rs
services/tracker-service/: Cargo.toml
services/tracker-service/src/: main.rs
