[workspace]
resolver = "2"
members = [
    "crates/panacea-core",
    "crates/panacea-observability",
    "services/scraper-service",
    "services/nutrition-service",
    "services/scoring-service",
    "services/eval-service",
    "services/recipe-service",
    "services/supplement-service",
    "services/tracker-service",
    "services/pricing-service",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
thiserror = "1"
async-nats = "0.35"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
anyhow = "1"
panacea-core = { path = "crates/panacea-core" }
panacea-observability = { path = "crates/panacea-observability" }
