[package]
name = "supplement-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supplement-service"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
panacea-core = { workspace = true }
panacea-observability = { workspace = true }
